# NlpLogDiploma

./: .gitignore  README.md  bwt  main.py
bwt/: main.cpp
diploma/diploma/: CMakeLists.txt  main.cpp
diploma/diploma/arithmetic_coding/: arithmetic_decoder.cpp
diploma/diploma/arithmetic_log_model/: arithmetic_ppm_decoder.h  arithmetic_ppm_encoder.h
diploma/diploma/bwt/: bwt_coder.h
diploma/diploma/log_model/: coder.h  record_storage.h  smart_coder.cpp
diploma/diploma/log_model/coders/: smart_coder.h
diploma/diploma/log_model/storages/: greedy_record_storage.h  sliding_window_record_storage.h
diploma/diploma/probability_model/: model.h  ppm_model.cpp  ppm_model.h
v2/: CMakeLists.txt  README.md
v2/benchmark/: benchmark.py  common.py  hyperparameter_search.py
v2/benchmark/CLIs/: bzip.py  gzip.py  rar.py  sevenzip.py  subprepcs.py  zpaq.py  zstd.py
v2/benchmark/results/: benchmark_results-20240522_105124.csv  benchmark_results-20240522_224701.csv  benchmark_results-20240522_225446-zle.csv  benchmark_results-20240522_235323-mtf2.csv  benchmark_results-20240523_000023.csv  benchmark_results-20240523_003245.csv  benchmark_results-20240523_013348.csv  benchmark_results-20240523_013609.csv  benchmark_results-20240523_014647.csv  benchmark_results-20240523_015633.csv  benchmark_results-20240523_182324.csv  benchmark_results-20240523_184315.csv  benchmark_results-20240523_184511.csv  benchmark_results-20240530_112009.csv  benchmark_results-20240530_112129.csv  benchmark_results-20240530_112238.csv  benchmark_results-20240530_112347.csv  benchmark_results-20240530_112545.csv  benchmark_results-20240530_114650.csv  benchmark_results-20240530_114803.csv  benchmark_results-20240530_114923.csv  benchmark_results-20240530_115038.csv  benchmark_results-20240530_115152.csv  benchmark_results-20240530_115344.csv  benchmark_results-20240530_122059.csv  benchmark_results-20240530_124502.csv  benchmark_results-20240530_125019.csv  benchmark_results-20240530_125153.csv  benchmark_results-20240530_125451.csv  benchmark_results-20240530_125749.csv  benchmark_results-20240530_125847.csv  benchmark_results-20240530_125941.csv  benchmark_results-20240530_130038.csv  benchmark_results-20240530_130140.csv  benchmark_results-20240530_130329.csv  benchmark_results-20240530_132953.csv  benchmark_results-20240530_175347.csv  benchmark_results-20240530_175850.csv  benchmark_results-20240530_194214.csv  benchmark_results-20240530_194415.csv  (+20 more)
v2/src/: cli.cpp  compression_config.proto  config.proto  default_compression_config.textproto  defs.hpp
v2/src/encoding/: residue_coder.hpp
v2/src/encoding/arithmetic/: arithmetic_decoder.cpp  arithmetic_decoder.hpp  arithmetic_encoder.cpp  arithmetic_encoder.hpp  base_coder.cpp  base_coder.hpp
v2/src/encoding/generic/: bwt_decoder.cpp  bwt_decoder.hpp  bwt_encoder.cpp  bwt_encoder.hpp  chained_generic_decoder.cpp  chained_generic_decoder.hpp  chained_generic_encoder.cpp  chained_generic_encoder.hpp  generic_coder.hpp  generic_decoder.hpp  generic_encoder.hpp  identity_decoder.cpp  identity_decoder.hpp  identity_encoder.cpp  identity_encoder.hpp  modelling_bwt_decoder.cpp  modelling_bwt_decoder.hpp  modelling_bwt_encoder.cpp  modelling_bwt_encoder.hpp  modelling_decoder.cpp  modelling_decoder.hpp  modelling_encoder.cpp  modelling_encoder.hpp  subprepcs_decoder.cpp  subprepcs_decoder.hpp  subprepcs_encoder.cpp  subprepcs_encoder.hpp
v2/src/encoding/log/: base_log_coder.hpp  primary_log_decoder.cpp  primary_log_decoder.hpp  primary_log_encoder.cpp  primary_log_encoder.hpp  secondary_log_coder.hpp  secondary_log_decoder.hpp  secondary_log_encoder.hpp  zigzag_coder.hpp
v2/src/encoding/utils/: bit_input_stream.cpp  bit_input_stream.hpp  bit_output_stream.cpp  bit_output_stream.hpp
v2/src/modelling/: base_model.hpp  distribution.hpp  naive_model.cpp  naive_model.hpp  ppm_model.cpp  ppm_model.hpp
v2/src/utils/: bwt.cpp  bwt.hpp  mtf2_stable_storage.hpp  mtf2_storage.hpp
v2/tests/modelling/: test_distribution.cpp  test_naive_model.cpp  test_ppm_model.cpp
v2/tests/utils/: test_bwt.cpp  test_mtf2.cpp
(+129 files in other folders)
