cmake_minimum_required(VERSION 3.25)
project(diploma)

set(CMAKE_CXX_STANDARD 17)

add_executable(diploma_copy main.cpp arithmetic_log_model/secondary_encoder.h arithmetic_log_model/combined_log_encoder.cpp arithmetic_log_model/combined_log_encoder.h arithmetic_log_model/combined_log_decoder.cpp arithmetic_log_model/combined_log_decoder.h log_model/coders/smart_coder.h log_model/storages/greedy_record_storage.h log_model/storages/sliding_window_record_storage.h log_model/storages/move_to_front_record_storage.h probability_model/ppm_model.h arithmetic_log_model/arithmetic_ppm_encoder.h arithmetic_log_model/arithmetic_ppm_decoder.h)
